--- a/airflow/Dockerfile
+++ b/airflow/Dockerfile
@@ -1,5 +1,23 @@
 FROM apache/airflow:3.1.3
 COPY requirements.txt /requirements.txt
+
+USER root
+
+RUN apt-get update && apt-get install -y \
+    wget \
+    gnupg \
+    unzip \
+    curl \
+    chromium \
+    chromium-driver \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN cp /usr/bin/chromedriver /home/airflow/chromedriver \
+    && chown airflow /home/airflow/chromedriver \
+    && chmod 755 /home/airflow/chromedriver
+
+USER airflow
+
 RUN pip install --user --upgrade pip
 RUN pip install --no-cache-dir --user -r /requirements.txt
 
