--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -106,6 +106,8 @@ services:
   minio:
     image: minio/minio:RELEASE.2025-09-07T16-13-09Z-cpuv1
     command: server --console-address ":9001" http://minio/data{1...2}
+    container_name: minio
+    hostname: minio
     expose:
       - "9000"
       - "9001"
@@ -117,7 +119,6 @@ services:
       - secret_key
     env_file:
       - ${ENV_FILE_PATH:-.env}
-    hostname: minio
     volumes:
       - data1-1:/data1
       - data1-2:/data2
